fix word wrap

--- a/inventory.css
+++ b/inventory.css
@@ -20,7 +20,7 @@ body {
   background-color: #f2f2f2;
 }
 
-#divtable tr:hover {
+#divtable tbody tr:hover {
   background-color: #ddd;
 }
 
@@ -31,4 +31,5 @@ body {
   background-color: #04AA6D;
   color: white;
   font-size: medium;
+  white-space: nowrap;
 }
